Fixed some problems in OC4J platform Changed Timeout in the http rest server call (could have problems for very long operations but to fix this we need to wait for async mco execution)

--- a/templates/widgets/agent/modalform.html
+++ b/templates/widgets/agent/modalform.html
@@ -73,6 +73,9 @@
 								} else if (result.type == 'html') {
 									$("#" + data.response_container).html(result.response);	
 								}
+								if (result.state == 'FAILURE' && result.message == 'TIMEOUT') {
+									alert('Request Timeout');
+								}
 					        	$('#modalprogress').dialog('close');
 					        }
 				        // do something else
