--- a/templates/platforms/oc4j/instanceform.html
+++ b/templates/platforms/oc4j/instanceform.html
@@ -49,7 +49,7 @@
 						if (data.result[server_resp].message!=undefined) {
 							$("#emsg").append("<div class='errorbox'>" + data.result[server_resp].message + "</div><br/>").fadeIn("slow");
 						} else {
-							$("#emsg").append("<div class='messagebox'>" + data.result[server_resp].reponse + "</div><br/>").fadeIn("slow");			
+							$("#emsg").append("<div class='messagebox'>" + data.result[server_resp].response + "</div><br/>").fadeIn("slow");			
 						}
 					}
 				} else {
