--- a/templates/theme/kermit/base.html
+++ b/templates/theme/kermit/base.html
@@ -172,6 +172,8 @@
 						<div id="progressbar"></div>
 						<div id="taskstate"></div>
 					</div>
+					<div id="modalresponsecontainer">
+					</div>
 					{% block content %}{% endblock %}
 				</p>
 			</div>
