--- a/templates/platforms/jboss/logform.html
+++ b/templates/platforms/jboss/logform.html
@@ -76,24 +76,28 @@
 			} else {
 				$("#logcontainer").empty();
 				if (data.result!="KO") {
+					$("#logcontainer").dialog({
+						modal : true,
+						title : 'Server Log',
+						height : 400,
+						width : 800,
+						close: function(event, ui) {
+							$(this).remove();	
+						},
+						open: function(event, ui){
+							$('body').css('overflow','auto');
+							$('.ui-widget-overlay').css('width','100%'); 
+						} 
+					});
 					for (server_resp in data.result) {
+						$("#logcontainer").append("<b>" + data.result[server_resp].server + "</b><br/>");
 						if (data.result[server_resp].message!=undefined) {
-							$("#emsg").html("<div class='errorbox'>" + data.result[server_resp].message + "</div><br/>").fadeIn("slow");
+							$("#logcontainer").append(data.result[server_resp].message);
 						} else {
 							getLogContent(data.result[server_resp].server, data.result[server_resp].logfile);
-							$("#logcontainer").dialog({
-								modal : true,
-								title : 'Server Log',
-								height : 400,
-								width : 800,
-								open: function(event, ui){
-									$('body').css('overflow','auto');
-									$('.ui-widget-overlay').css('width','100%'); 
-								} 
-							});	
-							$("#" + data.dialog_name).dialog('close');
 						}
-					}		
+					}
+					$("#" + data.dialog_name).dialog('close');		
 				} else {
 					$("#emsg").append("<div class='errorbox'>" + data.message + "</div><br/>").fadeIn("slow");
 				}
@@ -136,7 +140,6 @@
 			},
 			success : function(data) {
 				if(data && data.logfilecontent) {
-					$("#logcontainer").append("<h1>" + server + "</h1>");	
 					$("#logcontainer").append(data.logfilecontent);	
 				} else {
 					$("#logcontainer").html("No log file found with the given name " + logFile);
