--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -56,6 +56,27 @@
 	<div id="taskstate"></div>
 </div>
 <script type="text/javascript">
+	function executeActionNoProgress(url) {
+		//$("#" + destination).empty();
+		$.ajax({
+			url: url,
+			type: 'get',
+			beforeSend : function() {
+				$('#loading').show()
+			},
+			complete : function() {
+				$('#loading').hide()
+			},
+			error : function() {
+				$('#loading').hide()
+			},
+			success : function() {
+				alert("Operation Completed");
+			},
+			timeout: 120000
+		});
+	}
+
 	function executeAction(title, url) {
 		$('#modalprogress').dialog({
 			modal : true,
@@ -96,6 +117,14 @@
 	    return "{% url get_progress taskname=12345 taskid=6789 %}".replace("12345", taskname).replace("6789", uuid);
 	}
 </script>
+
+<div id="loading">
+	<div id="loader">
+		<p><img src="{{STATIC_URL}}images/ajax-loader.gif" />
+		</p>
+	</div>
+</div>
+
 <div class="container-grid">
 	<div id="uploadForm"></div>
     <div class="column span-12">
@@ -123,7 +152,7 @@
 		<h2>{% trans 'Refresh Actions' %}</h2>
 		<ul class="actionlist">
 			<li>
-				<a href="#" onclick="executeAction('Refresh Widgets', '{% url action_executer "refresh_dashboard" "ASYNC"%}');">{% trans 'Refresh Widgets' %}</a>
+				<a href="#" onclick="executeActionNoProgress('Refresh Widgets', '{% url action_executer "refresh_dashboard" "ASYNC"%}');">{% trans 'Refresh Widgets' %}</a>
 			</li>
 			<li>
 				<a href="#" onclick="executeAction('Refresh Server Basic Info', '{% url action_executer "refresh_server_basic_info" "ASYNC"%}');">{% trans 'Refresh Server Basic Info' %}</a>
