--- a/templates/theme/kermit/header.html
+++ b/templates/theme/kermit/header.html
@@ -8,9 +8,9 @@
 		<img src="{{STATIC_URL}}images/header/kermit_logo.png" height="40px" border="0px"/>
 	</div>
 	{% if user.is_authenticated %}
-	<ul id="user-tools">
+	<ul id="user-tools" class="mainmenu">
 		<li class="user-options-container collapse closed">
-			Welcome <a href="javascript://" class="user-options-handler collapse-handler">{% firstof user.first_name user.username %}</a>
+			<a href="javascript://" class="user-options-handler collapse-handler">Welcome {% firstof user.first_name user.username %}</a>
 			<ul class="user-options">
 				<!-- Change Password -->
 				{% url admin:password_change as password_change_url %}
