--- a/templates/platforms/application.html
+++ b/templates/platforms/application.html
@@ -13,7 +13,7 @@
 {% block content %} 
 <br/>
 <div id="columns">
-	<ul id="column2" class="column">
+	<ul id="singlecolumn" class="column">
 		{% widget "ApplicationDetails" user appname %}
 		&nbsp;<br/>&nbsp;<br/>
 	</ul>
