--- a/templates/chain/chain.html
+++ b/templates/chain/chain.html
@@ -1,6 +1,6 @@
 {% extends "theme/meta.html" %}
 {% load widgets %}
-{% load i18n%}
+{% load i18n %}
 
 {% block navbar %}{% endblock %}
 
@@ -9,422 +9,14 @@
 	<a href="{{base_url}}/">{% trans 'Home' %}</a>{% if title %} &rsaquo; {{ title }}{% endif %} <a href="{{base_url}}/chain/show/">{% trans 'Scheduler' %}</a>
 </div>
 {% endblock %}
-{% block content %}
-<script type="text/javascript">
 
-	function createServerList(selectId) {
-		var serverFilter = ""
-		$(selectId+" option").each(function(i, selected){ 
-		  if (serverFilter!="") {
-		  	serverFilter=serverFilter+";";
-		  }
-		  serverFilter = serverFilter + $(selected).text(); 
-		});
-		return serverFilter;
-	}
-
-	$('html').ajaxSend(function(event, xhr, settings) {
-		if(!(/^http:.*/.test(settings.url) || /^https:.*/.test(settings.url))) {
-			// Only send the token to relative URLs i.e. locally.
-			xhr.setRequestHeader("X-CSRFToken", $("#csrfmiddlewaretoken").val());
-		}
-	});
-        $(document).ready(function() {
-			var options = {
-				url : '{% url chain_execute "xhr" %}', // Here we pass the xhr flag
-				dataType : 'json',
-				success : parseResponse,
-				error: parseError,
-				beforeSubmit : beforeForm
-			};
-			var string_server = "{{server_list}}".replace(/&quot;/g, '"');
-			var server_list = jQuery.parseJSON(string_server);
-			// bind form using ajaxForm
-			$('#chainForm').ajaxForm(options);
-			$("#submitForm").attr('disabled','disabled');
-	
-            $('#btnAdd').click(function() {
-                var num = $('.clonedOperation').length;
-                var newNum  = new Number(num + 1);
- 
-                var newElem = $('#template').clone().attr('id', 'template' + newNum).attr("class", "clonedOperation").css({visibility: "visible"});
- 
-                newElem.find('#operation').attr('id', 'operation' + newNum).attr('name', 'operation' + newNum);
-				newElem.find('#server').attr('id', 'server' + newNum).attr('name', 'server' + newNum);
-				newElem.find('#addServer').attr('id', 'addServer' + newNum);
-				newElem.find('#removeServer').attr('id', 'removeServer' + newNum);
-				newElem.find('#listServer').attr('id', 'listServer' + newNum).attr('name', 'listServer' + newNum);
-				newElem.find('#listServerHidden').attr('id', 'listServerHidden' + newNum).attr('name', 'listServerHidden' + newNum);
-				newElem.find('#listServerContainer').attr('id', 'listServerContainer' + newNum).attr('name', 'listServerContainer' + newNum);
-				newElem.find('#operationdata').attr('id', 'operationdata' + newNum);
-				if (num == 0) {
-					$("#buttons").after(newElem);	
-				} else {
-                	$('#template' + num).after(newElem);
-                }
-				$('#btnDel').removeAttr('disabled');
-				$('#submitForm').removeAttr('disabled');
- 
-                if (newNum == 5) {
-                    $('#btnAdd').attr('disabled','disabled');
-				}
-				
-				$('#operation'+newNum).change(function() {
-					$('#server'+newNum).empty();
-					$('#server'+newNum).css({visibility: "visible"});
-					$('#listServer'+newNum).css({visibility: "visible"});
-					$('#listServerContainer'+newNum).css({visibility: "visible"});
-					$('#addServer'+newNum).css({visibility: "visible"});
-					$('#removeServer'+newNum).css({visibility: "visible"});
-					$('#server'+newNum).flexbox(server_list, {
-						watermark: 'Enter server name',
-						paging: false,  
-    					maxVisibleRows: 8  
-					});
-					if (this.value == 'script_ex') {
-						var execScript = $('#executeScript').clone().attr('id', 'executeScript' + newNum).css({visibility: "visible"});
-						//Execute Script
-						execScript.find('#sqlScript').attr('id', 'sqlScript' + newNum).attr('name', 'sqlScript' + newNum);
-						execScript.find('#dbinstancename').attr('id', 'dbinstancename' + newNum).attr('name', 'dbinstancename' + newNum);
-						execScript.find('#refreshSql').attr('id', 'refreshSql' + newNum);
-						$("#operationdata"+newNum).html(execScript);
-						$('#refreshSql'+newNum).click(function() {
-							var serverFilter = createServerList("#listServer"+newNum);
-							$.ajax({
-								// The link we are accessing.
-								url : '{{base_url}}/chain/sql_list/' + serverFilter + '/',
-								// The type of request.
-								type : "get",
-								// The type of data that is getting returned.
-								dataType : "json",
-								error : function() {
-									//TODO: Show error message
-									alert("Server communication error. Cannot download sql List");
-									$('#loading').hide();
-								},
-								beforeSend : function() {
-									$('#loading').show();
-								},
-								complete : function() {
-									$('#loading').hide();
-								},
-								success : function(data) {
-									$("#sqlScript"+newNum).empty();
-									if(data.errors) {
-										alert(data.errors);
-									} else {
-										for(i in data.sqllist) {
-											content = "<option value='" + data.sqllist[i] + "'>" + data.sqllist[i] + "</option>";
-											$(content).appendTo("#sqlScript"+newNum);
-										}
-									}
-								}
-							});	
-						});
-					} else if (this.value == 'deploy_bar') {
-						//DeployBar
-						var deployBar = $('#deployBar').clone().attr('id', 'deployBar' + newNum).css({visibility: "visible"});
-						deployBar.find('#barApp').attr('id', 'barApp' + newNum).attr('name', 'barApp' + newNum);
-						deployBar.find('#consoleName').attr('id', 'consoleName' + newNum).attr('name', 'consoleName' + newNum);
-						deployBar.find('#refreshBar').attr('id', 'refreshBar' + newNum);
-						$("#operationdata"+newNum).html(deployBar);
-						$('#refreshBar'+newNum).click(function() {
-							var serverFilter = createServerList("#listServer"+newNum);
-							$.ajax({
-								url : '{{base_url}}/chain/bar_list/' + serverFilter + '/',
-								// The type of request.
-								type : "get",
-								// The type of data that is getting returned.
-								dataType : "json",
-								error : function() {
-									//TODO: Show error message
-									alert("Server communication error. Cannot get instances list for selected server");
-									$('#loading').hide();
-								},
-								beforeSend : function() {
-									$('#loading').show();
-								},
-								complete : function() {
-									$('#loading').hide();
-								},
-								success : function(data) {
-									$("#barApp"+newNum).empty();
-									if (data.errors) {
-										alert(data.errors);
-									} else {
-										for(i in data.applist) {
-											content = "<option value='" + data.applist[i] + "'>" + data.applist[i] + "</option>";
-											$(content).appendTo("#barApp"+newNum);
-										}
-									}
-								}
-							});
-						});	
-					} else if (this.value == 'deploy_ear') {
-						//DeployEar
-						var deployEar = $('#deployEar').clone().attr('id', 'deployEar' + newNum).css({visibility: "visible"});
-						deployEar.find('#earApp').attr('id', 'earApp' + newNum).attr('name', 'earApp' + newNum);
-						deployEar.find('#instancename').attr('id', 'instancename' + newNum).attr('name', 'instancename' + newNum);
-						deployEar.find('#appname').attr('id', 'appname' + newNum).attr('name', 'appname' + newNum);
-						deployEar.find('#refreshEar').attr('id', 'refreshEar' + newNum);
-						deployEar.find('#serverType').attr('id', 'serverType' + newNum).attr('name', 'serverType' + newNum);
-						$("#operationdata"+newNum).html(deployEar);
-						$('#refreshEar'+newNum).click(function() {
-							var serverFilter = createServerList("#listServer"+newNum);
-							var serverType = $("#serverType"+newNum).val();
-							$.ajax({
-								url : '{{base_url}}/chain/ear_list/' + serverFilter + '/' + serverType + '/',
-								// The type of request.
-								type : "get",
-								// The type of data that is getting returned.
-								dataType : "json",
-								error : function() {
-									//TODO: Show error message
-									alert("Server communication error. Cannot download sql List");
-									$('#loading').hide();
-								},
-								beforeSend : function() {
-									$('#loading').show();
-								},
-								complete : function() {
-									$('#loading').hide();
-								},
-								success : function(data) {
-									$("#earApp"+newNum).empty();
-									if (data.errors) {
-										alert(data.errors);
-									} else {
-										for(i in data.applist) {
-											content = "<option value='" + data.applist[i] + "'>" + data.applist[i] + "</option>";
-											$(content).appendTo("#earApp"+newNum);
-										}
-									}
-								}
-							});	
-						});	
-					} else if (this.value == 'restart_instance') {
-						//Restart Instance
-						var restartInstance = $('#restartInstance').clone().attr('id', 'restartInstance' + newNum).css({visibility: "visible"});
-						restartInstance.find('#instancename').attr('id', 'instancename' + newNum).attr('name', 'instancename' + newNum);
-						restartInstance.find('#serverType').attr('id', 'serverType' + newNum).attr('name', 'serverType' + newNum);
-						$("#operationdata"+newNum).html(restartInstance);
-					}
-				});
-				
-				$('#addServer'+newNum).click(function() {
-					if ($('#server'+newNum+'_hidden').val()!='' && $('#server'+newNum+'_hidden').val()!=undefined) {
-						$('#listServer'+newNum).append('<option value="'+$('#server'+newNum+'_hidden').val()+'">'+$('#server'+newNum+'_hidden').val()+'</option>');
-						var serverFilter = createServerList("#listServer"+newNum);
-						$("#listServerHidden"+newNum).val(serverFilter);	
-					} else {
-						alert("You must select server to add...");
-					}
-				});
-				
-				$('#removeServer'+newNum).click(function() {
-					$("#listServer"+newNum+" :selected").each(function(i, selected){ 
-					  $(selected).remove(); 
-					  var serverFilter = createServerList("#listServer"+newNum);
-					  $("#listServerHidden"+newNum).val(serverFilter);
-					});
-				});
-			
-            });
- 
-            $('#btnDel').click(function() {
-                var num = $('.clonedOperation').length;
-                $('#template' + num).remove();
-                //$('#btnAdd').attr('disabled','');
- 
-                if (num == 1) {
-                    $('#btnDel').attr('disabled','disabled');
-					$('#submitForm').attr('disabled','disabled');
-				}
-            });
- 
-            $('#btnDel').attr('disabled','disabled');
-        });
-
-		function parseResponse(data) {
-			$('#loading').hide();
-			if(data) {
-				// Build a var. NOTE: Make sure your id name (this is a div) is NOT THE SAME
-				// as any var in javascript -- ie has a fit and barfs errors.
-				e_msg = "We received your form, thank you.";
-				// Did we set the 'bad' flag in Django?
-				// Use eval() to turn the stuff in the data object into actual vars.
-				if(eval(data.bad)) {
-					e_msg = "Please check your form.";
-					errors = eval(data.errs);
-					$.each(errors, function(fieldname, errmsg) {
-						id = "#" + fieldname;
-						$(id).parent().before(errmsg);
-					});
-				} else {
-					$('#modalprogress').dialog({
-							modal : true,
-							title : 'Progress...',
-							height : 100,
-							width : 500
-					});
-					$( "#progressbar" ).progressbar({ value: 0 });
-					$( "#taskstate").html('<b>Waiting...	</b>');
-					$.get(data.update_url, function(response) {
-						var checkStatus = function() {
-							$.getJSON(data.update_url, function(result) {
-					    		$( "#progressbar").progressbar({ value: result.value });
-								$( "#taskstate").html('<b>' + result.state + '</b>');	
-						        if(result.state!='SUCCESS' && result.state!='FAILURE' && result.state!=undefined) {
-						            setTimeout(checkStatus, 2000);
-						        } else {
-						        	var response_container = "#modalresponsecontainer";
-						        	$(response_container).empty();
-									for (i in result.responsecontent) {
-										resp = result.responsecontent[i];
-										content = '<strong>' + resp.name + '</strong>';
-										content += '<ul>';
-										content += '<li> Status Code: ' + resp.message + '</li>';
-										content += '</ul>';
-										$(content).appendTo(response_container);	
-									}
-									
-									if (result.state == 'FAILURE' && result.message == 'TIMEOUT') {
-										alert('Request Timeout');
-									}
-									$(response_container).dialog({
-											modal : true,
-											title : 'Execution response',
-											height : 200,
-											width : 500
-									});
-						        	$('#modalprogress').dialog('close');
-						        }
-					        // do something else
-			    		 	});
-						}
-						if (data.UUID) {
-							checkStatus();
-						} else {
-							if (data.error) {
-								$( "#taskstate").html(data.error);
-							}
-						}
-					});			
-				}
-			} else {
-				//DON'T PANIC :D
-				$('#emsg').text("Ajax error : no data received. ").fadeIn("slow");
-			}
-		}
-		
-		function parseError(data) {
-			$('#loading').hide();
-			if(data) {
-				alert(data.result);				
-				$("#" + data.dialog_name).dialog('close');
-			} else {
-				//DON'T PANIC :D
-				$('#emsg').text("Ajax error : no data received. ").fadeIn("slow");
-			}
-		}
-	
-		function beforeForm() {
-			$('.errorlist').remove();
-			$('#emsg').fadeOut('slow');
-			$('#loading').show();
-			return true;
-		}
-</script>
+{% block content %} 
 <br/>
-<div id="emsg">
-	&nbsp;
+<div id="columns">
+	<ul id="singlecolumn" class="column">
+		{% widget "ChainEditor" user %}
+		{% widget "ChainHistory" user %}
+		&nbsp;<br/>&nbsp;<br/>
+	</ul>
 </div>
-<form id="chainForm" action="{% url chain_execute None%}" method="post" >
-	<div id="buttons">
-		<input type="button" id="btnAdd" value="Add Operation" />
-    	<input type="button" id="btnDel" value="Remove Operation" />
-    	<input type="submit" id="submitForm" value="Execute Chain" />    
-	</div>
-	<div id="errMsg"></div>
-</form>
-
-<div id="template" style="visibility: hidden;">
-	<br/>
-	<fieldset style="border: 1px solid black; padding: 10px;">
-		<legend>Configure operation</legend>
-		<table>
-			<tr>
-				<td>
-					<select id="operation">
-						<option value="">Select...</option>
-						{% for op in operations %}
-							<option value="{{op.id}}">{{op.name}}</option>
-						{% endfor %}
-					</select>
-				</td>
-				<td>
-					<div id="server" style="visibility: hidden;"></div>
-				</td>
-				<td>
-					<input type="button" id="addServer" value="Add Server" style="visibility: hidden;"/><br/>
-					<input type="button" id="removeServer" value="Remove Server" style="visibility: hidden;"/>
-				</td>
-				<td>
-					<div id="listServerContainer" style="visibility: hidden;">{% trans 'Servers selected' %}:<br/>
-						<select id="listServer" name="listServer" multiple size="5" style="visibility: hidden;width:250px;"></select>
-						<input type="hidden" id="listServerHidden" value=""/>
-					</div>
-				</td>
-			</tr>
-			<tr>
-				<td id="operationdata" colspan="4">
-					
-				</td>
-			</tr>
-		</table>
-	</fieldset>
-</div>
-
-<div id="deployEar" style="visibility: hidden;">
-	<p>
-	{% trans 'Server Type'%}: <select id="serverType"><option value="OC4J">OC4J</option><option value="WebLogic">WebLogic</option></select>
-	</p>
-	<p>
-	{% trans 'Application'%}: <select id="earApp"></select>
-	<input type="button" id="refreshEar" value="Refresh App list"/><br/>
-	</p>
-	<p>
-	{% trans 'Instance Name'%}: <input type="text" id="instancename"/><br/>
-	</p>
-	<p>
-	{% trans 'Application Name'%}: <input type="text" id="appname"/>
-	</p>
-</div>
-<div id="executeScript" style="visibility: hidden;">
-	<p>
-		{% trans 'SQL Script'%}: <select id="sqlScript"></select>	
-		<input type="button" id="refreshSql" value="Refresh SQL list"/><br/>
-	</p>
-	<p>
-		{% trans 'DB Instance Name'%}: <input type="text" id="dbinstancename"/>
-	</p>
-</div>
-<div id="deployBar" style="visibility: hidden;">
-	<p>
-	{% trans 'BAR Name'%}: <select id="barApp"></select>
-	<input type="button" id="refreshBar" value="Refresh Bar list"/><br/>
-	</p>
-	<p>
-	{% trans 'Console Name'%}: <input type="text" id="consoleName"></input>
-	</p>
-</div>
-<div id="restartInstance" style="visibility: hidden;">
-	<p>
-	{% trans 'Server Type'%}: <select id="serverType"><option value="OC4J">OC4J</option><option value="WebLogic">WebLogic</option></select>
-	</p>
-	<p>
-	{% trans 'Instance Name'%}: <input type="text" id="instancename"></input>
-	</p>
-</div>	
-
-{% endblock %}
+{% endblock %} 
